gave some padding

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
             <div class="below">
                 <div class="first mb-5">
-                    <h1 class="head1">Become a Mixlr audio creator today</h1>
+                    <h1 class="head1 pb-4">Become a Mixlr audio creator today</h1>
                     <button type="button" class="btn btn-secondary rounded-pill fs-3 bg-danger text-light px-3 border-0 fw-semibold">Start free trial</button>
                 </div>
 
