--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
              <div class="navbr-brand">
-                <a style="border-radius: 50%;"  class="navbar-brand" href="#"><img src="multimedia/PHOTO-2024-09-23-09-25-17.jpg" height="70" width="70" class="d-inline-block align-text-top"alt=""></a>
+                <a style="border-radius: 50%;"  class="navbar-brand" href="#"><img src="multimedia/imxlogo.png" height="70" width="70" class="d-inline-block align-text-top navimage bg-light"alt=""></a>
              </div>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
